# 11-bot-training

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
bots/: base.py
bots/chatbot/: bot.py  models.py  prompts.py  run.py
bots/competitor/: bot.py  models.py  run.py
bots/competitor_analysis/: bot.py  models.py  prompts.py  run.py
bots/content/: bot.py  models.py  run.py
bots/content_creation/: bot.py  models.py  prompts.py  run.py
bots/forum/: bot.py  models.py  run.py
bots/forum_marketing/: bot.py  models.py  prompts.py  run.py
bots/future/loyalty_retention/: bot.py
bots/future/reservation_funnel/: bot.py
bots/future/review_monitoring/: bot.py
bots/link_building/: bot.py  models.py  prompts.py  run.py
bots/local_seo/: bot.py  models.py  prompts.py  run.py
bots/loyalty/: bot.py
bots/orchestrator/: bot.py  models.py  prompts.py  run.py
bots/reservation_funnel/: bot.py
bots/review_monitor/: bot.py
bots/trend_tracking/: bot.py  models.py  prompts.py  run.py
common/: config.py
common/crawling/: crawler.py  scraper.py
common/db/: database.py
common/llm/: client.py
common/models/: base.py
common/storage/: database.py
infra/: config.py  scheduler.py
restaurant_bots.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_base.py  test_base_bot.py  test_common.py  test_competitor_analysis.py  test_content_creation.py  test_forum_marketing.py  test_link_building.py  test_local_seo.py  test_orchestrator.py
tests/bots/: test_competitor.py  test_content.py  test_forum.py  test_local_seo.py  test_orchestrator.py
tests/common/: test_models.py
