[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-bots"
version = "0.1.0"
description = "11-bot marketing/SEO system for local restaurant"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "httpx>=0.24",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "jinja2>=3.1",
    "click>=8.1",
    "markdown>=3.5",
    "schedule>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bots*", "common*", "infra*"]
