[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-bots"
version = "0.1.0"
description = "Multi-agent marketing/SEO bot system for local restaurants"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "aiohttp>=3.9",
    "click>=8.1",
    "rich>=13.0",
    "apscheduler>=3.10",
    "jinja2>=3.1",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.12",
    "ruff>=0.1",
    "black>=23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bots*", "common*", "infra*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
